<resources>
    <string name="app_name">CodePathProject2GoogleImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="imgSizeText">Image Size</string>
    <string name="imgTypeText">Image Type</string>
    <string name="imgColorText">Image Color Format</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="searchSite">Search in site</string>
    <string-array name="imgSizes">
        <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    <string-array name="imgTypes">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string-array name="imgColors">
        <item>color</item>
        <item>gray</item>
    </string-array>
</resources>
